# chai-vc-platform

./: .editorconfig  .env  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SOC2_CONTROL_MATRIX.md  TODO.md  benchmark.js  chain_spec.rs  cypress.config.js  docker-compose.dev  docker-compose.override.yml  docker-compose.yml  hardhat.config.js  next.config.js  nx.json  package-lock.json  package.json  playwright.config.ts  run:  temp_build_skip.sh  tsconfig.json  values-pilot.yaml
.claude/commands/: ci-fix.md  (+1 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
aca_py_agent/: README.md
ai-matcher-service/: Dockerfile  README.md  package.json  project.json  requirements.txt
ai_matcher_service/: __init__.py
ai_translation_service/: translation_service.py
anomaly_detection/: transaction_anomaly_agent.py
api_gateway/: README.md  main.py
backend/: Dockerfile  README.md  __init__.py  issuance_flow.py  jest.config.js  package-lock.json  package.json  project.json  requirements.txt  server.js  tsconfig.json
browser-extension/: README.md  content.js  manifest.json
bug-bounty/: app.py
compliance/: README.md  index.html
contracts/: ChaiCredentialBridge.sol  DIDRegistry.sol  IVerifier.sol  JobOfferEscrow.sol  MatchingPool.sol  MilestoneEscrow.sol  MultiSigEscrow.sol  ProofVerifier.sol  ReputationSBT.sol  SelectiveDisclosureVerifier.sol  TrustRegistry.sol  hardhat.config.js  package-lock.json  package.json
credential-demo/: hardhat.config.js  package-lock.json  package.json
dashboard/: mttr_dashboard.py
didcomm-agent/: package-lock.json  package.json  tsconfig.json
didcomm_messaging/: README.md  prototype_server.py  wallet_client.py
docs/: DEVELOPER_PORTAL.md  DEV_PORTAL.md  ROADMAP.md  UX-Test-Urgent-Hiring.md  architecture.drawio  architecture.md  consortium-governance-agent.md  credential_validation.md  disaster_recovery.md  eco-friendly-token-emission.md  gameday.md  pagerduty.md  performance_optimization.md  pq-escrow-whitepaper.md  pq_escrow_vc_whitepaper.md  provisional_patent_self_healing_governance.md  psv_microservices.md  retention.md  soulbound_cme_pallet.md  substrate_eks_poa_setup.md
engine/: step_order_rl.py
feedback_service/: main.py
fhir-bridge/: package-lock.json  package.json  sample_vc.json  server.js
frontend/: build.py  i18n.ts  package-lock.json  package.json  project.json  server.js
identity-governance-pallet/: Cargo.toml
identity-governance-pallet/src/: lib.rs
infrastructure/: README.md
integrations/: README.md
job_ingestion_service/: main.py
k8s/: README.md  aca_py_agent.yaml  ai-matcher-service.yaml  argocd-applications.yaml  backend-deployment.yaml  backend-rollout.yaml  bias-monitor-cronjob.yaml  cosign-policy.yaml  grafana-synthetic-user.yaml  istio-mtls.yaml  network-policies.yaml  self-healing-cronjob.yaml
marketing/: cross-state-hospital-rollout.md
mobile/: App.tsx  README.md  package.json
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
monitoring_dashboard/: server.py
monitoring_service/: continuous_monitoring.py
mpc-service/: README.md  app.py
ocr-service/: README.md
opa/: policy.rego
pallet-credential-attestation/: Cargo.toml
pallets/credential-registry/: Cargo.toml  README.md
pallets/credential-registry/src/: lib.rs
pallets/proof-of-existence/: Cargo.toml  README.md
pallets/proof-of-existence/src/: lib.rs
policies/: privacy_policy.md
policy/: iam_least_privilege.rego
policy_audit/: agent.py
pricing/: bonding_curve.py
prompts/: prompt_v1.txt  prompt_v2.txt
runbooks/: api-outage.md  db-failover.md  node-crash.md
scripts/: README.md  archive_old_pipeline_artifacts.sh  audit_hook.sh  auto_recover_failed_pods.sh  auto_recover_nodes.sh  bulk_issue.ts  collect_terraform_evidence.py  cosign-sign.sh  deploy.js  generate_compliance_report.py  generate_docs.py  generate_graphql_docs.py  measureShareCredential.js  prompt_ab_test.py  run_dilithium_testnet.sh  simulate_vc_countersign.py  version_prompt.py
security/: generate_and_run_tests.py
sentinel/: forbid_public_s3_buckets.sentinel  sentinel.hcl
simulation/: README.md  credential_scenario_simulator.py
substrate/: README.md
substrate/pallet-state-board/: Cargo.toml  README.md
substrate/pallet-state-board/src/: lib.rs
substrate/pallets/did/: Cargo.toml
substrate/pallets/did/src/: lib.rs  mock.rs  tests.rs  weights.rs
terraform/: rds.tf
test/: deploy.js  matchingPool.ts
trusted-node/: Dockerfile  README.md  index.js  package.json
verification_orchestrator/: __init__.py
verifier-contract/: README.md  hardhat.config.js  package.json
wallet/: bbs_wallet.js  demo.js
zk-circuits/: credentialAttributeEquality.circom
zk-sample/: license_active.circom  package.json  test_license_proof.js
zkp/: prototype_license_zkp.py
(+490 files in other folders)
